# SimpleRAG

./: .gitignore  LICENSE  MANIFEST.in  README.md  package_test.py  pyproject.toml
rag/: __init__.py  cli.py  demo.py
rag/core/: __init__.py  chunker.py  config.py  embedder.py  retriever.py  vector_store.py
tests/: __init__.py  conftest.py  test_chunker.py  test_cli.py  test_config.py  test_embedder.py  test_retriever.py  test_vector_store.py
